Prevent carousel buttons showing on small viewports (#7020)

--- a/src/scss/blocks/_carousel.scss
+++ b/src/scss/blocks/_carousel.scss
@@ -1,12 +1,8 @@
 /// COMPONENT LIBRARY LOCATION
 /// https://web.dev/design-system/component/carousel
 .carousel {
-  display: grid;
-  grid-template-columns: 2rem 1fr 2rem;
-  gap: $global-gutter-narrow;
-  align-items: center;
-
   .icon-button {
+    display: none;
     height: 36px;
     width: 36px;
 
@@ -63,6 +59,19 @@
   // E.G cards will all be the same height in a carousel
   > * > * {
     height: 100%;
+  }
+}
+
+@include media-query('md') {
+  .carousel {
+    display: grid;
+    grid-template-columns: 2rem 1fr 2rem;
+    gap: $global-gutter-narrow;
+    align-items: center;
+
+    .icon-button {
+      display: inline-block;
+    }
   }
 }
 
